# csound-cxx-opcodes

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  clean-build-linux.bash  clean-build-macos.bash  clean-build-windows.bash  clean-build.sh  cxx_opcodes.cpp  risset.json  update-csound-ac-files.bash
.github/workflows/: build-and-release.yml
cxx-opcodes/: CMakeLists.txt  cxx_invokable.hpp  cxx_opcodes.cpp
examples/: cxx_example.csd  cxx_hello.csd
